<resources>
    <string name="app_name">BetterCalculator</string>
    <string name="starting_value">0</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_times">X</string>
    <string name="button_divide">/</string>
    <string name="button_erase">C</string>
    <string name="button_equal">=</string>
    <string name="button_zero">0</string>
    <string name="button_change_sign_text">\u207a/\u208b</string>
    <string name="button_percent_text">%</string>
    <string name="button_decimal_string">.</string>
    <string name="button_left_paren_string">(</string>
    <string name="button_right_paren">)</string>
    <string name="button_2nd">2nd</string>
    <string name="button_x_to_the_y">n\u1D50</string>
    <string name="button_e_to_the_x">e^x</string>
    <string name="button_e_to_the_x_string">e\u207F</string>
    <string name="button_x_squared_string">n\u00B2</string>
    <string name="button_10_to_the_x">10\u207F</string>
    <string name="button_reciprocal">\u00b9/\u2099</string>
    <string name="button_square_root_string">\u221An</string>
    <string name="button_yth_root_of_x_string">\u1D50\u221An</string>
    <string name="button_ln_string">ln</string>
    <string name="button_log_string">log</string>
    <string name="button_factorial_string">x!</string>
    <string name="button_sin_string">sin</string>
    <string name="button_cos_string">cos</string>
    <string name="button_tan_string">tan</string>
    <string name="button_e">e</string>
    <string name="button_random_string">Rand</string>
    <string name="button_sinh_string">sinh</string>
    <string name="button_cosh_string">cosh</string>
    <string name="button_tanh_string">tanh</string>
    <string name="button_pi_string">π</string>
    <string name="button_2nd_string">2nd</string>
    <string name="button_n_to_the_m_string">n\u1d50</string>
    <string name="button_root_string">\u1d50\u221An</string>
    <string name="button_arcsin_string">sin\u207b\u00b9</string>
    <string name="button_arccos_string">cos\u207b\u00b9</string>
    <string name="button_arctan_string">tan\u207b\u00b9</string>
    <string name="button_arcsinh_string">sinh\u207b\u00b9</string>
    <string name="button_arcosh_string">cosh\u207b\u00b9</string>
    <string name="button_arctanh_string">tanh\u207b\u00b9</string>
    <string name="button_log_base_y">logy</string>
    <string name="button_two_to_the_n_string">2\u207F</string>
    <string name="button_log2_string">log\u2082</string>
    <string name="button_round_string">Round</string>
</resources>